--- a/style/style.css
+++ b/style/style.css
@@ -267,8 +267,10 @@ body::-webkit-scrollbar-thumb {
   height: 500px;
   padding: 0 10px;
   display: flex;
+  flex-wrap: wrap;
   background-color: #b2b3b607;
 }
+
 
 .about-us-image{
   width: 50%;
@@ -293,6 +295,7 @@ body::-webkit-scrollbar-thumb {
 
 }
 
+
 .about-us-content div{
   text-align: center;
   width: 95%;
@@ -305,12 +308,28 @@ body::-webkit-scrollbar-thumb {
 }
 
 
+@media screen and (max-width: 768px) {
 
+  .about-us{
+    height: auto;
+    padding: 50px;
+    row-gap: 20px;
+  }
+  .about-us-image{
+    width: 100%;
+    order: 2;
+  }
+
+  .about-us-content{
+    width: 100%;
+    order: 1;
+  }
+  
+}
 
 /* services starts */
 .service{
   width: 100%;
- 
   padding-bottom: 50px;
   
 }
@@ -359,4 +378,10 @@ body::-webkit-scrollbar-thumb {
 
 .service-item .service-description p{
   font-size: 15px;
+}
+
+@media screen and (max-width: 768px) {
+
+
+  
 }
