--- a/style/style.css
+++ b/style/style.css
@@ -238,7 +238,7 @@ body::-webkit-scrollbar-thumb {
 .slider .next {
   right: 0;
 }
-.slider .dotsbox {
+.slider .dotsbox{
   width: 100%;
   position: absolute;
   left: 50%;
@@ -248,7 +248,7 @@ body::-webkit-scrollbar-thumb {
 }
 .dotsbox .dot {
   display: inline-block;
-  width: 30px;
+  width: 20px;
   height: 1px;
   border: 3px solid #fff;
   margin: 0 10px;
@@ -265,7 +265,7 @@ body::-webkit-scrollbar-thumb {
 
 .about-us{
   height: 500px;
-  padding: 0 10px;
+  padding: 0 25px;
   display: flex;
   flex-wrap: wrap;
   background-color: #b2b3b607;
@@ -292,6 +292,7 @@ body::-webkit-scrollbar-thumb {
   display: grid;
   place-items: center ;
   direction: rtl;
+  padding: 0 50px;
 
 }
 
@@ -310,9 +311,22 @@ body::-webkit-scrollbar-thumb {
 
 @media screen and (max-width: 768px) {
 
+  .slider .prev,
+.slider .next {
+  margin: 0 5px;
+  font-size: 25px;
+  padding: 10px;
+}
+
+
+.slider .dotsbox {
+  bottom: 5px;
+
+}
+
   .about-us{
     height: auto;
-    padding: 50px;
+    padding: 25px;
     row-gap: 20px;
   }
   .about-us-image{
@@ -322,7 +336,9 @@ body::-webkit-scrollbar-thumb {
 
   .about-us-content{
     width: 100%;
+    font-size: 14px;
     order: 1;
+    padding: 0;
   }
   
 }
@@ -382,6 +398,14 @@ body::-webkit-scrollbar-thumb {
 
 @media screen and (max-width: 768px) {
 
+  
 
+  .service-card{
+    row-gap: 25px;
+  }
+
+  .service-card .service-item{
+    width: 75%;
+  }
   
 }
