--- a/style/style.css
+++ b/style/style.css
@@ -33,8 +33,8 @@ body {
   align-items: center;
   justify-self: start;
   height: 30px;
-  position: relative;
-  z-index: 101;
+  /* position: relative;
+  z-index: 101; */
 }
 
 
