--- a/style/style.css
+++ b/style/style.css
@@ -63,7 +63,7 @@ body {
   padding: 5px 100px;
   background-color: white;
   position: sticky;
-  top: 0;
+  top: 0px;
   z-index: 100;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
