--- a/style/style.css
+++ b/style/style.css
@@ -288,19 +288,71 @@ body::-webkit-scrollbar-thumb {
 
 /* About Us */
 
-.about-us-top{
+
+
+.about_us{
   max-width: 1400px;
   width: 90%;
-  margin: 0 auto;
+  margin: 80px auto;
   direction: rtl;
-  margin-bottom: 30px;
-  margin-top: 50px;
 }
 
-.about-us-top  h2{
+.about_us  h1{
+  text-align: center;
+  padding-top: 10px;
   padding: 20px 0;
-  text-align: right;
 }
+
+.tab_box{
+  direction: rtl;
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  column-gap: 10px;
+  position: relative;
+  margin-top: 10px;
+}
+
+
+.tab_box .tab_btn{
+  font-size: 18px;
+  color: #98ca3d;
+  background: none;
+  border: none;
+  padding: 18px;
+  cursor: pointer;
+  border-bottom: 3px solid transparent;
+  transition: border 0.1s ease;
+}
+
+.tab_box .tab_btn.active{
+  border-bottom-color:#4ec6de;
+}
+
+.content_box{
+  padding: 20px;
+}
+
+.content_box .content{
+  display: none;
+}
+
+
+.content_box .content.active{
+  display: block;
+}
+
+.content_box .content h2{
+  margin-bottom: 10px;
+}
+
+
+.about-us-top{
+  direction: rtl;
+}
+
+
 
 .about-us-top p{
   line-height: 2.5;
@@ -309,12 +361,9 @@ body::-webkit-scrollbar-thumb {
 }
 
 .about-us-bottom {
-  max-width: 1400px;
-  width: 90%;
-  margin: 0 auto;
+  direction: ltr;
   display: flex;
   flex-wrap: wrap;
-
 }
 
 
@@ -485,4 +534,5 @@ body::-webkit-scrollbar-thumb {
     grid-template-columns: repeat(auto-fit, 255px);
   }
 }
+
 
