--- a/style/style.css
+++ b/style/style.css
@@ -298,9 +298,10 @@ body::-webkit-scrollbar-thumb {
 }
 
 .about_us  h1{
-  text-align: center;
+  text-align: right;
   padding-top: 10px;
   padding: 20px 0;
+
 }
 
 .tab_box{
@@ -536,3 +537,85 @@ body::-webkit-scrollbar-thumb {
 }
 
 
+
+
+.proposal{
+  width: 100%;
+
+  /* background-color: #4ec6de; */
+  max-width: 1400px;
+  width: 90%;
+  margin: 80px auto;
+  direction: rtl;
+
+}
+
+.proposal-title h1{
+  text-align: right;
+  padding-top: 10px;
+  padding: 0 0 30px 0;
+}
+
+.proposal-detail{
+  padding: 0 100px;
+}
+.proposal-detail label{
+  display: block;
+  padding: 10px;
+}
+
+.proposal-detail #pname{
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  outline: none;
+  background-color: white;
+  border: 1px solid gainsboro;
+}
+
+
+.proposal-detail #ptext{
+  width: 100%;
+  height: 150px;
+  padding: 12px 20px;
+  background-color: white;
+  font-size: 16px;
+  resize: none;
+  border: 1px solid gainsboro;
+  outline: none;
+}
+
+
+
+
+.proposal-detail button {
+  background-color: #fff;
+  border: 1px solid gainsboro;
+  font-size: 14px;
+  font-size: 1.1rem;
+  padding: 0.3rem 2rem;
+  transition: all .1s cubic-bezier(.4, 0, .2, 1);
+  user-select: none;
+  margin-top: 10px;
+  background-color:  #4ec6de;
+  color: #fff;
+  cursor: pointer;
+}
+
+.proposal-detail #pname:focus, .proposal-detail #ptext:focus{
+  border-color: #a3a7aa;
+}
+
+.proposal-detail button:hover{
+  opacity: 0.8;
+}
+
+
+.footer{
+  margin-top: 100px;
+  width: 100%;
+  height: 400px;
+  background-color: #4ec6de;
+  border-top-left-radius: 100px;
+  border-top-right-radius: 100px;
+}
