--- a/style/style.css
+++ b/style/style.css
@@ -321,12 +321,14 @@ body::-webkit-scrollbar-thumb {
   color: #98ca3d;
   background: none;
   border: none;
-  padding: 18px;
+  padding: 10px 18px;
   cursor: pointer;
   border-bottom: 3px solid transparent;
   transition: border 0.1s ease;
 }
-
+.tab_box .tab_btn:not(.tab_box .tab_btn.active):hover{
+  border-bottom-color:#4ec6de38;
+}
 .tab_box .tab_btn.active{
   border-bottom-color:#4ec6de;
 }
