--- a/style/package.css
+++ b/style/package.css
@@ -8,6 +8,9 @@
     padding: 50px;
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    row-gap: 30px;
     background-color: white;
     border-radius: 20px;
 
@@ -15,18 +18,17 @@
 
 
 .package-controller{
-    width: 20%;
-    height: 100%;
-    padding: 100px 0;
+
     display: flex;
-    flex-direction: column;
-    justify-content: start;
+    justify-content: center;
     align-items: center;
+
 
 }
 
 .package-controller button{
-    width: 90%;
+    /* width: 90%; */
+    width: 150px;
     margin: 10px;
     padding: 10px;
     outline: none;
@@ -51,13 +53,12 @@
 
 
 .package-detail{
-    width: 75%;
-    height: 90%;
+    width: 90%;
     padding: 0 50px;
     /* background-color: azure; */
     display: flex;
     flex-wrap: wrap;
-    gap: 20px 30px;
+    gap: 20px 50px;
     justify-content: center;
 
 
