--- a/style/package.css
+++ b/style/package.css
@@ -1,21 +1,38 @@
 
 
+
+
+.info{
+    padding: 50px 50px 0 50px;
+    direction: rtl;
+}
+
+.info p{
+    padding: 20px;
+}
+
+
 .packages{
     width: 90%;
     max-width: 1200px;
     min-height: 700px;
-    margin: 20px auto;
+    margin: 0 auto;
     padding: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     row-gap: 30px;
-    background-color: white;
+    /* background-color: white; */
     border-radius: 20px;
 
 }
 
+.content-center{
+    max-width: 1600px;
+    margin: 0 auto;
+    width: 100%;
+}
 
 .package-controller{
 
