--- a/style/style.css
+++ b/style/style.css
@@ -71,34 +71,74 @@
 
 }
 
-.tab_box{
+
+
+.tabs{
+
+  display: flex;
+  align-items: center;
+  user-select: none;
+
+}
+
+.tabs .tab_box{
   direction: rtl;
-  width: 100%;
+  width: 350px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  column-gap: 10px;
+  /* column-gap: 10px; */
   position: relative;
-  margin-top: 10px;
 }
 
 
-.tab_box .tab_btn{
+.tabs .tab_box label{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
   font-size: 18px;
+  font-weight: 400;
+  border-radius: 5px;
   color: #98ca3d;
-  background: none;
-  border: none;
-  padding: 10px 18px;
   cursor: pointer;
-  border-bottom: 3px solid transparent;
-  transition: border 0.1s ease;
+  transition: all 0.3s ease;
+  z-index: 1;
+
 }
-.tab_box .tab_btn:not(.tab_box .tab_btn.active):hover{
-  border-bottom-color:#4ec6de38;
+
+
+
+.tabs .slider{
+  position: absolute;
+  height: 3px;
+  width: 33.3%;
+  background-color: #4ec6de;
+  right: 0;
+  bottom: -5px;
+  border-radius: 5px;
+  transition: all 0.2s ease-out;
 }
-.tab_box .tab_btn.active{
-  border-bottom-color:#4ec6de;
+
+
+#about:checked ~ .tab_box .slider{
+  right: 33.3%;
 }
+
+#code:checked ~ .tab_box .slider{
+  right: 66.6%;
+}
+
+.tabs >  input[type=radio]{
+  display: none;
+}
+
+
+
+
+
 
 .content_box{
   padding: 20px;
@@ -345,7 +385,7 @@
 
 .proposal-detail #ptext{
   width: 100%;
-  height: 150px;
+  height: 200px;
   padding: 12px 20px;
   background-color: white;
   font-size: 16px;
@@ -377,14 +417,4 @@
 
 .proposal-detail button:hover{
   opacity: 0.8;
-}
-
-
-.footer{
-  margin-top: 100px;
-  width: 100%;
-  height: 400px;
-  background-color: #4ec6de;
-  border-top-left-radius: 100px;
-  border-top-right-radius: 100px;
 }
