--- a/style/style.css
+++ b/style/style.css
@@ -61,7 +61,9 @@
   max-width: 1400px;
   width: 90%;
   margin: 80px auto;
+  scroll-margin-top: 100px; 
   direction: rtl;
+
 }
 
 .about_us  h1{
@@ -253,7 +255,7 @@
   max-width: 1400px;
   width: 100%;
   margin: 10px auto;
-
+  scroll-margin-top: 50px; 
   /* background-color: #4ec6de; */
 }
 
@@ -352,6 +354,7 @@
   width: 100%;
 
   /* background-color: #4ec6de; */
+  scroll-margin-top: 100px; 
   max-width: 1400px;
   width: 90%;
   margin: 80px auto;
