--- a/style/nav.css
+++ b/style/nav.css
@@ -57,11 +57,10 @@
   }
   
   
-  
   /* Navbar Sart */
-  
   .navbar {
     width: 100%;
+    height: 60px;
     padding: 0 30px;
     background-color: white;
     position: sticky;
@@ -74,16 +73,22 @@
     user-select: none;
   
   }
+
+  .horizontal-nav-items{
+    display: flex;
+    align-items: center;
+  }
   
   .navbar > a {
     padding: 0;
     margin: 0;
     display: flex;
+    align-items: center;
+    justify-content: center;
   }
   
   .navbar ul {
     list-style: none;
-    display: flex;
   }
   
   .navbar ul li a {
@@ -101,11 +106,10 @@
     color: black;
   }
   
-  .navbar ul li:not(:has(> a)),
-  .navbar ul li:not(:has(> a)) ul li {
+  .navbar ul li:not(:has(> a)){
     position: relative;
   }
-  
+
   .navbar ul li a,
   .navbar ul li:not(:has(> a)) div {
     font-size: 18px;
@@ -115,16 +119,17 @@
     display: block;
     cursor: pointer;
     user-select: none;
+
   }
-  
-  .navbar ul li a:hover,
-  .navbar ul li:not(:has(> a)) div:hover {
+
+  .agents li div:hover, .agents ul li a:hover {
     background-color: #4ec6de;
     color: #fff;
   }
   
   .navbar ul li:not(:has(> a)) div{
     width: 130px;
+    text-align: center;
   }
   
   .navbar ul li ul {
@@ -134,10 +139,8 @@
     background: #fff;
     display: none;
     box-shadow: 0px 0px 2px 0px rgb(238, 237, 237);
-  
-    z-index: 1;
+    z-index: 5;
     text-align: center;
-    /* border-top: 1px solid rgb(231, 230, 230); */
   }
   
   .navbar ul li ul li ul{
